# ztp-manager

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  install.sh
defaults/: ztp-manager-logging.conf
helper/: data_types.h  database_ctrl.cpp  database_ctrl.h
manager/: main.cpp  manager.cpp  manager.h  server.cpp  server.h
